<resources>
    <string name="app_name">WineCave</string>
    <string name="navVin">Wine</string>
    <string name="navCommande">Order</string>
    <string name="navMouvement">Movement</string>
    <string name="navParam">Settings</string>
    <string name="add_wine">Add Wine</string>
    <string name="order_wine">Order Wine</string>
    <string name="title_activity_add_wine">AddWine</string>
    <string name="validate_wine">Validate Wine</string>
    <string name="year">Year</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="add_cepage">Add Cepage</string>
    <string name="add_place">Add Place</string>
    <string name="validate_place">Validate Place</string>
    <string name="validate_cepage">Validate Cepage</string>
    <string name="description">Description</string>
    <string name="stock_restant_pce">Stock restant : %1$dpce</string>
    <string name="originaire_de">Originaire de %1$s</string>
    <string name="compos_de">Composed of : %1$s</string>
    <string name="edit_wine">Edit wine</string>
    <string name="cepage_choice">Cepage Choice</string>
    <string name="provider_name">Provider Name</string>
    <string name="provider_surname">Provider Surname</string>
    <string name="provider_address">Provider Address</string>
    <string name="provider_email">Provider Email</string>
    <string name="add_provider">Add Provider</string>
    <string name="validate_provider">Validate Provider</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="pink">Pink</string>
    <string name="add_order">Add Order</string>
    <string name="validate_order">Validate Order</string>
    <string name="received">Received</string>
    <string name="cancel">Cancel</string>
    <string name="number_out">number to take out</string>
    <string name="error_provider_name">Please add a provider name</string>
    <string name="error_provider_surname">Please add a provider surname</string>
    <string name="error_provider_address">Please add a provider address</string>
    <string name="error_provider_email">Please add a provider email</string>
    <string name="error_place_name">Please add a place name</string>
    <string name="error_cepage_name">Please add a ceapge name</string>
    <string name="error_quantity">Please add quantity</string>
    <string name="command_received">Command received</string>
    <string name="command_canceled">Command canceled</string>
    <string name="get_out">Get out</string>
    <string name="no_order">No order</string>
    <string name="add_picutre">add picutre</string>
    <string name="aProposdeNous">Cette application a été créé par Maxime Bétrisey et Hugo Rebelo dans le cadre du cours android de la HES-SO (EN)</string>
    <string name="synchronize">synchronized</string>
</resources>
