<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item android:actionLayout="@layout/activity_home"
        android:id="@+id/navBtnValidateAddWine"
        android:title="@string/validate_wine"
        android:icon="@drawable/ic_validate"
        app:showAsAction="always"/>

    <item android:actionLayout="@layout/activity_add_place"
        android:id="@+id/navBtnAddRegion"
        android:title="@string/add_place"/>

    <item android:actionLayout="@layout/activity_add_cepage"
        android:id="@+id/navBtnAddCepage"
        android:title="@string/add_cepage"/>

    <item android:actionLayout="@layout/activity_add_provider"
        android:id="@+id/navBtnAddProvider"
        android:title="@string/add_provider"/>

</menu>